# ferrico_dot_app

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  ci.yml  pages.yml  pr-report.yml  release.yml
docs/: google-drive-backup.md  mobile-v1-device-verification.md  mobile-v1-playbook.md
extension/: CLAUDE.md  manifest.json  options.html  options.js  popup.html  popup.js
site/: README.md  index.html
src/: App.tsx  CLAUDE.md  events.test.ts  events.ts  index.css  main.tsx  platform.test.ts  platform.ts  test-utils.ts  types.ts  useDrag.ts  useDragDrop.ts  utils.test.ts  utils.ts
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  error.rs  gdrive.rs  health_check.rs  io.rs  io_validate.rs  lib.rs  main.rs  merge.rs  og_image.rs
src/components/: AddBookmarkModal.test.tsx  AddBookmarkModal.tsx  AddFolderModal.test.tsx  AddFolderModal.tsx  AddTagModal.test.tsx  AddTagModal.tsx  AiChatPanel.tsx  BackupSettingsModal.tsx  BackupSettingsPage.test.tsx  BackupSettingsPage.tsx  BookmarkCard.tsx  BookmarkGrid.test.tsx  BookmarkGrid.tsx  BookmarkList.test.tsx  BookmarkList.tsx  BookmarkRow.test.tsx  BookmarkRow.tsx  ContextMenu.test.tsx  ContextMenu.tsx  DeduplicateModal.tsx  EmptyState.test.tsx  EmptyState.tsx  Favicon.test.tsx  Favicon.tsx  ImportCsvModal.tsx  ImportModal.test.tsx  ImportModal.tsx  InboxSortModal.tsx  ModalShell.test.tsx  ModalShell.tsx  SearchBox.test.tsx  SearchBox.tsx  SettingsLayout.tsx  SettingsModal.test.tsx  SettingsModal.tsx  SettingsPage.test.tsx  SettingsPage.tsx  Sidebar.test.tsx  Sidebar.tsx  TagCombobox.tsx  (+1 more)
src/mobile/: FilterDrawer.test.tsx  FilterDrawer.tsx  MobileApp.test.tsx  MobileApp.tsx  MobileBookmarkList.test.tsx  MobileBookmarkList.tsx  MobileBookmarkListItem.test.tsx  MobileBookmarkListItem.tsx  MobileHeader.test.tsx  MobileHeader.tsx  MobileSettings.test.tsx  MobileSettings.tsx  mobile.css
