[package]
name = "ferrico"
version = "0.4.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
scraper = "0.20"
nucleo-matcher = "0.3"
rfd = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Speed up the hot paths (SQLite/serde/fuzzy matcher) even in dev builds, while
# keeping our own crate fast to recompile.
[profile.dev.package."*"]
opt-level = 2
