[package]
name = "ferrico"
version = "0.10.0"
edition = "2021"
description = "A fast, local-first desktop bookmark manager built with Tauri and React."
authors = ["Andreas Sander <mail@andi1984.de>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andi1984/ferrico_dot_app"
homepage = "https://github.com/andi1984/ferrico_dot_app"
readme = "../README.md"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "1"
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
scraper = "0.20"
nucleo-matcher = "0.3"
rfd = "0.15"
sha2 = "0.10"
base64 = "0.22"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
# `test-util` enables `#[tokio::test(start_paused = true)]` so time-based retry
# backoff in health_check collapses instantly instead of really sleeping.
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Speed up the hot paths (SQLite/serde/fuzzy matcher) even in dev builds, while
# keeping our own crate fast to recompile.
[profile.dev.package."*"]
opt-level = 2
