[package]
name = "ferrico"
version = "0.13.0"
edition = "2021"
description = "A fast, local-first desktop bookmark manager built with Tauri and React."
authors = ["Andreas Sander <mail@andi1984.de>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/andi1984/ferrico_dot_app"
homepage = "https://github.com/andi1984/ferrico_dot_app"
readme = "../README.md"

[lib]
name = "ferrico_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
thiserror = "1"
tauri-plugin-opener = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }
scraper = "0.20"
nucleo-matcher = "0.3"
sha2 = "0.10"
base64 = "0.22"

# Desktop-only: `dirs::data_dir()` resolves the legacy desktop data dir (mobile
# uses Tauri's `app_data_dir()` — see `resolve_data_dir` in lib.rs), and `rfd`
# file dialogs have no Android/iOS backend.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
dirs = "5"
rfd = "0.15"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
# `test-util` enables `#[tokio::test(start_paused = true)]` so time-based retry
# backoff in health_check collapses instantly instead of really sleeping.
tokio = { version = "1", features = ["test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# Speed up the hot paths (SQLite/serde/fuzzy matcher) even in dev builds, while
# keeping our own crate fast to recompile.
[profile.dev.package."*"]
opt-level = 2
